# m5-paper-buddy

./: .gitignore  README.en.md  README.md  TODOS.md
docs/: RLCD_PORTING.md  rot-screen.md
firmware/: CMakeLists.txt  README.md  burn.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  update-pic.md
firmware/main/: CMakeLists.txt  buddy_frames.h  config.h  idf_component.yml  main.cc
firmware/main/app/: buddy_app.cc  buddy_app.h
firmware/main/button/: button_handler.cc
firmware/main/display/: buddy_display.cc  buddy_display.h  lcd_driver.cc  lcd_driver.h  spiffs_image.cc  spiffs_image.h
firmware/main/hal/: button_handler.h  lcd_driver.h
firmware/main/model/: state_parser.cc  tama_state.h  xfer_commands.cc  xfer_commands.h
firmware/main/net/: ble_transport.h  line_protocol.cc  transport.h
firmware/main/protocol/: line_protocol.h
firmware/main/state/: state_parser.cc  state_parser.h  stats.cc  stats.h  tama_state.h  xfer_commands.h
firmware/main/transport/: ble_transport.cc  ble_transport.h  serial_jtag_transport.cc  serial_jtag_transport.h
firmware/main/ui/: buddy_display.cc  buddy_display.h  layout.h
firmware/test/: Makefile  stubs.cc  test_main.cc  test_runner
firmware/test/stubs/: esp_log.h  nvs.h  nvs_flash.h
firmware/test/stubs/freertos/: FreeRTOS.h  event_groups.h  task.h
tools/: claude_code_bridge.py
tools/bridge/: cli.py  git_helpers.py  heartbeat.py  hooks.py  protocol.py  state.py  tool_display.py  transcript.py  transport.py
