idf_component_register(
    SRCS
        "main.cc"
        "app/buddy_app.cc"
        "hal/lcd_driver.cc"
        "hal/spiffs_image.cc"
        "hal/button_handler.cc"
        "net/serial_jtag_transport.cc"
        "net/ble_transport.cc"
        "net/line_protocol.cc"
        "model/state_parser.cc"
        "model/stats.cc"
        "model/xfer_commands.cc"
        "ui/buddy_display.cc"
        "ui/lv_font_cjk_ext_14.c"
    INCLUDE_DIRS "."
    REQUIRES
        driver
        esp_lcd
        esp_lvgl_port
        lvgl
        button
        json
        esp_driver_usb_serial_jtag
        spiffs
        mbedtls
        bt
        nvs_flash
)
